upgrade dependencies WUIP